# wuai

./: .gitignore  LICENSE  Makefile  README.md  TODO.md  environment.yml  pyproject.toml
setup/: template.env
src/tests/: test_post.py  test_post_httplib.py  test_settings.py  test_token_diplomacy.py
src/wuai/: README.md  init.py  integration.py  integration2.py  interception.py  logging_config.py  marvin_hello.py  openai_integration.py  post2api.py  settings.py  status_code_exception.py  token_diplomacy.py  utils.py
