[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "wuai"
version = "0.0.1"
description = "A module for connecting to the washu azure openai instance"
authors = [
  { name = "Christopher Snyder MD. PhD." },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.11"

[project.entry-points."mkdocs.themes"]
material = "material.templates"


# dependencies = [
#    "pandas",
# dependencies = [
  #     "black",
  #     "flake8",
  #     "isort",
  #     "pip",
  #     "typer",
  #     "loguru",
  #     "tqdm",
  #     "ipython",
  #     "jupyterlab",
  #     "matplotlib",
  #     "notebook",
  #     "numpy",
  #     "pandas",
  #     "scikit-learn",
  #     "pytest"
  # ]
# ]



[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

# [tool.ruff.lint.isort]
# known_first_party = ["wuai"] #"not valid under current scheme" ?
# force_sort_within_sections = true


[tool.pytest.ini_options]
testpaths = ["tests","src/tests","wuai/src/tests"]


# [tool.pyright]
# exclude = [
# ]

